--- a/style.css
+++ b/style.css
@@ -59,3 +59,114 @@ body{
     background-color: #2c71b8;
     color: white;
 }
+.search-basket{
+    display: flex;
+    flex-wrap: wrap;
+    width: 270px;
+    height: 40px;
+}
+.search-form {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #search {
+    display: flex;
+    width: 170px;
+    height: 40px;
+    margin-top: 5px;
+    background-color: rgba(255, 255, 255, 0.75);
+    border: 1px solid #2c71b8;
+    outline: none;
+    
+  }
+  #search::placeholder {
+    color: #2c71b8;
+    font-size: 21px;
+    padding: 20px;
+  }
+  #search-submit {
+    display: block;
+    position: relative;
+    right: 35px;
+    top: 10px;
+    width: 30px;
+    height: 30px;
+    border: none;
+    background: url(images/search.png) no-repeat;
+    background-size: 20px;
+    background-position: 3px;
+    background-color: #2c71b8;
+    cursor: pointer;
+  }
+  .basket-form{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #basket {
+    display: flex;
+    position: relative;
+    width: 40px;    
+    height: 40px;
+    margin-top: 5px;
+    border: none;
+    background: url(images/basket.png) no-repeat;
+    background-color: rgba(255, 255, 255, 0.75);
+    background-size: 18px;
+    background-position: 10px;
+    cursor: pointer;
+  }
+  .basket-number {
+    display: block;
+    position: relative;
+    background-color: #2c71b8;
+    right: 50px;
+    bottom: 5px;
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+  }
+  .number-basket {
+    font-size: 12px;
+    color: #ffffff;
+    margin: 6px ;
+  }
+.sub-menu{
+    transform: scale(0);
+    transform-origin: top left;
+    transition: all .1s ease-in-out;
+    height: 315px;
+    width: 285px;
+    position: absolute; 
+    background-color: #2c71b8;
+    margin-left: -1px;
+    padding-top: 20px;
+    
+    
+    
+}
+.menu>li:hover .sub-menu li{
+    transform: scale(1);
+}
+.menu>li:hover .sub-menu{
+    transform: scale(1);
+}
+
+.sub-menu li{
+    height: 41px;
+    width: 285px;  
+    list-style: none;
+        
+}
+.sub-menu a{
+    font-size: 21px; 
+    text-decoration: none; 
+    color: white; 
+    display: block;
+    padding-left: 30px;
+    text-align: left;
+}
+.sub-menu a:hover{
+    background-color: rgba(255, 255, 255, 0.75);
+    color: #2c71b8;
+}
+  
